freelancer-k8s/minikube/01-gateway/service.yaml
# l. 316
apiVersion: v1
kind: Service
metadata:
  name: freelancer-gateway
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: freelancer-gateway
  ports:
    - name: gateway
      port: 4000
      targetPort: 4000
      protocol: TCP
# 317
# apiVersion: v1
# kind: Service
# metadata:
#   name: freelancer-gateway
#   namespace: production
# spec:
#   type: NodePort
#   selector:
#     app: freelancer-gateway
#   ports:
#     - name: gateway
#       nodePort: 31767  ## 30000 - 32767
#       targetPort: 4000
#       protocol: TCP
